[package]
name = "rusty-slider"
version = "0.17.1"
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2021"
license = "MIT"
description = "A small tool to display markdown files as a slideshow."
repository = "https://github.com/ollej/rusty-slider"
homepage = "https://ollej.github.io/rusty-slider/"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["markdown", "slideshow", "presentation", "graphics", "wasm"]
default-run = "rusty_slider"

[dependencies]
colorsys = "0.6.5"
image = "0.24.0"
macroquad = { version = "0.3.13", default-features = false }
markdown = { git = "https://github.com/johannhof/markdown.rs" }
nanoserde = "0.1.29"
structopt = "0.3.26"
syntect = { version = "4.5", default-features = false, features = ["default-fancy"]}
getrandom = { version = "0.2", features = ["js"] }
quad-url = "0.1.0"
glob = "0.3.0"
maud = "0.22.2"
regex = "1.5.4"
tempdir = "0.3.7"

# Doesn't work with android build
[profile.dev.package.'*']
opt-level = 3

[package.metadata.scripts]
build-web = "bin/build-web"
build-linux = "bin/build-linux"
build-win = "bin/build-win"
serve-web = "bin/serve-web"
build-apk = "bin/build-apk"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1

[lib]
name = "rusty_slider"
path = "src/lib.rs"

[[bin]]
name = "rusty_slider"
path = "src/main.rs"
