[package]
name = "rusty-slider"
version = "0.19.0"
authors = ["Olle Wreede <olle@wreede.se>"]
edition = "2021"
license = "MIT"
description = "A small tool to display markdown files as a slideshow."
repository = "https://github.com/ollej/rusty-slider"
homepage = "https://ollej.github.io/rusty-slider/"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["markdown", "slideshow", "presentation", "graphics", "wasm"]
default-run = "rusty_slider"

[dependencies]
colorsys = "0.6.5"
convert_case = "0.6.0"
glob = "0.3.0"
image = { version = "0.24.3", default-features = false, features = ["png"] }
macroquad = { version = "0.3.24" } # Add back default-features = false when issue is solved: https://github.com/not-fl3/macroquad/issues/492
markdown = { git = "https://github.com/johannhof/markdown.rs" }
maud = "0.24.0"
nanoserde = "0.1.30"
quad-url = "0.1.0"
regex = "1.5.4"
simple-easing = "1.0.0"
structopt = "0.3.26"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
tempfile = "3.3.0"

# Doesn't work with android build
[profile.dev.package.'*']
opt-level = 3

[package.metadata.scripts]
build-web = "bin/build-web"
build-linux = "bin/build-linux"
build-win = "bin/build-win"
serve-web = "bin/serve-web"
build-apk = "bin/build-apk"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
strip = true

[lib]
name = "rusty_slider"
path = "src/lib.rs"

[[bin]]
name = "rusty_slider"
path = "src/main.rs"
